--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -5,7 +5,7 @@
   <section class="jumbotron text-center">
     <div class="container">
       <h1 class="jumbotron-heading">ResonateAU Twitter Feed</h1>
-      <p class="lead text-muted">The tweets are fetched using Twitter API, they will be Dynamically updated.</p>
+      <p class="lead text-muted">The tweets are fetched using Twitter API, they will be Dynamically updated. Only 9 tweets are shown because of rate limiting in twitter API.</p>
     </div>
   </section>
 
